test/sema/missing-return.delta
// RUN: %check_errors %not %delta -typecheck %s

// CHECK: [[@LINE+1]]:5: error: 'foo' is missing a return statement
int foo(bool b) {
    if (b) {
        return 42;
    }
}
